// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cuityk.helloappim.javarpcproto";
option java_outer_classname = "JavaRpcProto";
option objc_class_prefix = "JRP";

package rpcprotos;

//定义Java提供的服务接口
service JavaRpcServerInterface {

    //发送消息到用户
    rpc SendMessageToUser (MessageParam) returns (JavaBaseResult) {
    }
}

//发送消息参数
message MessageParam {
    string toUsername = 2;
    string content = 3;
}

//BaseResult
message JavaBaseResult {
    int32 code = 1;
    string message = 2;
}